# SpeakToMeMCP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md
speaktome_mcp/: __init__.py  __main__.py  audio.py  contracts.py  server.py  session.py  speech.py  state.py  tools.py  transcription.py
tests/: conftest.py  fakes.py  test_cli_smoke.py  test_imports.py
tests/integration/: test_stdio_smoke.py
tests/unit/: test_audio_capture.py  test_audio_device_listing.py  test_mcp_tools.py  test_model_startup.py  test_session_manager.py  test_speech.py  test_state_machine.py  test_stop_returns_transcript.py  test_tool_contracts.py  test_transcriber.py
