[project]
name = "speaktome-mcp"
version = "0.2.0"
description = "Local stdio MCP scaffold for microphone-to-whisper transcription"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "alma3lol" },
]
maintainers = [
    { name = "alma3lol" },
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1,<2",
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/alma3lol/SpeakToMeMCP"
Repository = "https://github.com/alma3lol/SpeakToMeMCP"
Issues = "https://github.com/alma3lol/SpeakToMeMCP/issues"
Releases = "https://github.com/alma3lol/SpeakToMeMCP/releases"

[project.scripts]
speaktome-mcp = "speaktome_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["speaktome_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
